--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "Annapurna Badavane Association",
-    "short_name": "ABA",
+    "name": "Jal Vayu Vihar Association",
+    "short_name": "JVV",
     "icons": [
       {
         "src": "/icons/android-chrome-192x192.png",
